--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
+* , *::before , *::after
+{
+    box-sizing: border-box;
+}
+body{
+
+    font-family: 'Montserrat',sans-serif ;
+
+}
 
 .container-fluid 
 {
